pull lfs  images

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@ body {
 /* index.css or global.css */
 
 /* Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Quicksand:wght@300..700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Quicksand:wght@300..700&display=swap"); */
 
 /* --- Custom Swap Keyframes (Very Important) --- */
 /* Base Keyframes */
